<resources>
    <string name="app_name">The Present Movement</string>
    <string name="welcome_button">Welcome</string>
    <string name="sign_button">sign in</string>
    <string name="sign_text">Sign-in</string>
    <string name="slogan_text">Meet. Talk. Connect. Love.</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="email_hint_text">your email</string>
    <string name="password_hint_text">your password</string>
    <string name="createAccountText">Create Account</string>
    <string name="createAccountLowerText">create account</string>
    <string name="fristNameText">First Name</string>
    <string name="lastNameText">Last Name</string>
    <string name="firstNameEdittext">     Enter a last name . . .</string>
    <string name="lastNameEditText">     Enter a first name . . .</string>
    <string name="emailText">Email</string>
    <string name="emailEditText">    Enter a valid email . . .</string>
    <string name="logoutText">Logout</string>
    <string name="resetPassText">Reset Password</string>
    <string name="affiliatesText">Affiliates</string>
    <string name="donateText">Donate</string>
    <string name="shopText">Shop</string>
    <string name="campaignsText">Campaigns</string>
    <string name="createAnnounceText">Create Announcement</string>
    <string name="announceTitleText">Announcement Title</string>
    <string name="announceBodyText">Announcement Body</string>
    <string name="announceTitleHintText">     E.g. New Event: {Event Name} !</string>
    <string name="createAnnounceLowerText">create announcement</string>
    <string name="createEventText">Create Event</string>
    <string name="createEventLowerText">create event</string>
    <string name="eventDateText">Event Date</string>
    <string name="eventLinkText">Event Link</string>
    <string name="uploadImgText">Entry Image</string>
    <string name="createProjectText">Create Project</string>
    <string name="noticesText">Notices</string>
    <string name="homeText">Home</string>
    <string name="contactsText">Contacts</string>
    <string name="settingsText">Settings</string>
    <string name="adminText">Admin</string>
    <string name="searchText">Search</string>
    <string name="dateText">Date</string>
    <string name="blankDate">--/--/--</string>
    <string name="todayText">Today</string>
    <string name="placeHolderText">{x}</string>
    <string name="upcomingText">Upcoming</string>
    <string name="eventsText">Events</string>
    <string name="projectsText">Projects</string>
    <string name="eventsTextSingle">Event</string>
    <string name="projectsTextSingle">Project</string>
    <string name="newEventAddedText">New Event Added</string>
    <string name="newProjectAddedText">New Project Added</string>
    <string name="dateStartPrompt">Select a start date</string>
    <string name="dateEndPrompt">Select an end date</string>
    <string name="okText">ok</string>
    <string name="announcementBodyText">E.g. Hello Members
The think for good event has been postponed until the 26th, I have updated the card in the present movements app.
Take care
{Person}</string>
    <string name="myFeedText">My Feed</string>
    <string name="myProfileText">My Profile</string>
    <string name="associatesText">Associates</string>
    <string name="informationText">Information</string>
    <string name="contactNumberText">Contact Number</string>
    <string name="emailAddressText">Email Address</string>
    <string name="companyNameText">Company Name</string>
    <string name="linkedInText">LinkedIn</string>
    <string name="websiteText">Website</string>
    <string name="quoteText">Quote</string>
    <string name="editText">Edit</string>
    <string name="errorText">Error</string>
    <string name="memberText">Member</string>
    <string name="failedToGenerateListText">List Failed to Generate</string>
    <string name="upcomingProjectsText">Upcoming Projects</string>
    <string name="upcomingEventsText">Upcoming Events</string>
    <string name="seniorMemberText">Senior Member</string>
    <string-array name="imageSources">
        <item>Camera</item>
        <item>Photo Library</item>
    </string-array>
    <string name="imageSourcePrompt">Select an image source</string>
    <string name="cardOwnerHeading">\'s Card</string>
    <string name="initiativesText">Initiatives</string>
    <string name="accountsText">Accounts</string>
    <string name="announcementsText">Announcements</string>
    <string name="filterText">Filter</string>
    <string name="addText">New +</string>
    <string name="adminMenuTitleText">Admin Functions</string>
    <string-array name="adminItemFunctions">
        <item>View</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="missingText">Missing</string>
    <string name="confirmDeletionText">Confirm Deletion?</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>
    <string name="deletedText">Deleted</string>
    <string name="announcementText">Announcement</string>
    <string name="userText">User</string>
    <string name="passwordShort">Password too short, needs to be 8 or more characters</string>
    <string name="passwordNeedsNumber">Password needs to contain at least 1 digit</string>
    <string name="passwordNeedsLowerCase">Password needs to contain at least 1 lower case character</string>
    <string name="passwordNeedsUpperCase">Password needs to contain at least 1 upper case character</string>
    <string name="passwordNeedsToStartWithUpperCaseLetter">Password needs start with an upper case character</string>
    <string name="passwordNeedsSpecialCharacter">Password needs to include one of the following special characters: -?!@#£$%+=&amp;</string>
    <string name="passwordSpecialCharacters">-?!@#£$%+=&amp;</string>
    <string name="about_company">About Company</string>
    <string name="enter_about_information">Enter about information . . .</string>
    <string name="overview">Overview</string>
    <string name="enter_overview_information">Enter overview information . . .</string>
    <string name="enter_company_name">Enter company name . . .</string>
    <string name="createProjectLowerText">create project</string>
    <string name="projectTitleTxt">Project Title</string>
    <string name="projectTitleHint">Enter project name . . .</string>
    <string name="options">Options</string>
    <string name="manage_announcements">Manage\nAnnouncements</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="manage_events">Manage Events</string>
    <string name="manage_projects">Manage Projects</string>
    <string name="announcement_body">Announcement Body</string>
    <string name="joinProjectText">Join Project</string>
    <string name="viewMembersText">View Members</string>
    <string name="participantsText">Participants</string>
    <string name="invalidUrlText">Invalid Url</string>
    <string name="formsNotFilled">Please ensure all fields are filled out</string>
    <string name="changesSaved">Changes Saved</string>
    <string name="enterDate">Please enter a date</string>
    <string name="addedEvent">Added Event</string>
    <string name="noChanges"></string>
    <string name="addedAnnouncement">Announcement Added</string>
    <string name="userAdded">User Added</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="passwordNotMatched">Passwords do not match</string>
    <string name="save">Save</string>
    <string name="exitProject">Exit Project</string>
    <string name="joinedProject">Joined Project</string>
    <string name="confirmLeaveProject">Are you sure you want to exit the current project?</string>
    <string name="leftProject">Left Project</string>
    <string name="photoLibraryNotAvailable">Photo Library is not available</string>
    <string name="cameraNotAvailable">Camera is not available</string>
    <string name="imageUploadFailed">Imaged Failed To Upload</string>
    <string name="imageSaved">Image saved successfully</string>
    <string name="imageNotSaved">Failed to save image</string>
    <string name="unknownFeedSortingType">Unknown type for sorting Feed Content!</string>
    <string name="emailResetSent">Password reset link sent to: </string>
    <string name="accountNoLongerValidText">Account is no longer valid</string>

    <string name="newAnnouncement">New Announcement</string>
    <string name="editAnnouncement">Edit Announcement</string>

    <string name="editEvent">Edit Event</string>
    <string name="editProject">Edit Project</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>