<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings"
    android:background="@color/main_grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sub_grey"
        android:id="@+id/rlHeader"
        android:paddingBottom="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/llHeader"
            android:layout_centerVertical="true"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsText"
                android:id="@+id/tvScreenTitle"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            app:srcCompat="@drawable/refresh_icon"
            android:layout_marginRight="0dp"
            android:layout_toLeftOf="@id/ivLogo"
            android:layout_centerVertical="true"
            android:layout_weight="0"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/tpm_logo"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="0"
            />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="10dp"
        android:layout_below="@id/ivLogo"
        android:id="@+id/llMyProfileCard"
        android:background="@drawable/palette_12"
        android:backgroundTint="@color/sub_grey"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_gravity="center"
            android:id="@+id/ivMyProfileImage"
            android:layout_width="66dp"
            android:layout_height="66dp"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@color/accent_grey"
            android:background="@color/accent_grey"
            android:layout_marginLeft="2dp"
            android:layout_weight="0"
            android:scaleType="centerCrop"
            android:layout_marginRight="14dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvContactRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="12sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivNavArrow"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_marginRight="2dp"
            android:background="@drawable/palette_circle"
            android:backgroundTint="@color/accent_grey"
            android:src="@drawable/arrow_icon"
            app:tint="@color/sub_grey" />



    </LinearLayout>

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/logoutText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@id/llMyProfileCard"
        android:layout_marginTop="200dp"
        android:gravity="start|center"
        android:layout_marginLeft="15dp"
        android:paddingLeft="80dp"
        android:backgroundTint="@color/sub_grey"
        android:background="@drawable/palette_12"
        />

    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/resetPassText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="260dp"
        android:gravity="start|center"
        android:paddingLeft="80dp"
        android:layout_marginLeft="15dp"
        android:backgroundTint="@color/sub_grey"
        android:background="@drawable/palette_12"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="250dp">

        <TextView
            android:id="@+id/tvAffiliates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/affiliatesText"
            android:textSize="24sp"
            android:layout_gravity="left"
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:paddingBottom="5dp"
            android:layout_marginTop="100dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <!-- First Pair -->
            <TextView
                android:id="@+id/tvDonate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:background="@drawable/palette_12"
                android:backgroundTint="@color/sub_grey"
                android:gravity="start|center"
                android:text="@string/donateText"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp">
            </TextView>


            <TextView
                android:id="@+id/tvShop"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:background="@drawable/palette_12"
                android:backgroundTint="@color/sub_grey"
                android:gravity="start|center"
                android:text="@string/shopText"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp" >
            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!-- Second Pair -->
            <TextView
                android:id="@+id/tvInitiatives"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:background="@drawable/palette_12"
                android:backgroundTint="@color/sub_grey"
                android:gravity="start|center"
                android:text="@string/initiativesText"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingLeft="16dp"
                android:textColor="@color/white"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp" >
            </TextView>

            <TextView
                android:id="@+id/tvCampaignes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:background="@drawable/palette_12"
                android:backgroundTint="@color/sub_grey"
                android:gravity="start|center"
                android:text="@string/campaignsText"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingLeft="16dp"
                android:textColor="@color/white"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp" >
            </TextView>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>