<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_grey"
    tools:context=".create_announcement">

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sub_grey"
            android:id="@+id/rlHeader"
            android:paddingBottom="10dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/llHeader"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBackArrow"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/arrow_icon"
                    android:rotation="180"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Announcement"
                    android:id="@+id/tvScreenTitle"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                app:srcCompat="@drawable/refresh_icon"
                android:layout_marginRight="0dp"
                android:layout_toLeftOf="@id/ivLogo"
                android:layout_centerVertical="true"
                android:layout_weight="0"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/tpm_logo"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_weight="0"
                />
        </RelativeLayout>
        <!-- Announcement Title Field-->
        <TextView
            android:id="@+id/lblAnnounceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlHeader"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="45dp"
            android:text="@string/announceTitleText"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/etAnnounceTitle"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_below="@id/lblAnnounceTitle"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_rounded_edges"
            android:hint="@string/announceTitleHintText"
            android:textColorHint="@color/accent_grey"
            android:textColor="@android:color/white"
            android:inputType="textMultiLine"
            android:paddingLeft="6dp"/>

        <!-- Announcement Body Field-->
        <TextView
            android:id="@+id/lblAnnounceBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etAnnounceTitle"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="54dp"
            android:text="@string/announceBodyText"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/etAnnounceBody"
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:minHeight="140dp"
            android:layout_below="@id/lblAnnounceBody"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_centerHorizontal="true"
            android:gravity="top"
            android:padding="6dp"
            android:inputType="textMultiLine"
            android:background="@drawable/custom_rounded_edges"
            android:hint="@string/announcementBodyText"
            android:textColorHint="@color/accent_grey"
            android:textColor="@android:color/white"
            />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAnnounce"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_below="@id/etAnnounceBody"
            android:layout_marginTop="120dp"
            app:cornerRadius="30dp"
            android:text="@string/createAnnounceLowerText"
            android:textColor="@color/white"
            android:backgroundTint="@color/main_grey"
            android:stateListAnimator="@null"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            android:textSize="24dp"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:textStyle="bold"
            />
    </RelativeLayout>

</FrameLayout>